Added 'testCouponSize' field to certificate model and updated related views. Modified labels for electrode class to 'Filler Metal/Electrode Class Used' for clarity. Improved layout in certificate forms to include new field.

--- a/views/EditCertificate.ejs
+++ b/views/EditCertificate.ejs
@@ -87,15 +87,17 @@
         <td style="border: 1px solid black;font-weight: bold;">Joint Type</td>
         <td style="border: 1px solid black;"><input type="text" value="<%=record.jointType %>" name="jointType" id=""></td>
       </tr>
-      <tr>
-        
-       
+      <tr>       
       </tr>
       <tr>
         <td style="border: 1px solid black;font-weight: bold;">Date of Test</td>
         <td style="border: 1px solid black;"><input type="text" value="<%=record.date_of_test %>"name="date_of_test" id=""></td>
         <td style="border: 1px solid black;font-weight: bold;">Weld Type</td>
         <td style="border: 1px solid black;"><input type="text" value="<%=record.weldType %>"name="weldType" id=""></td>
+      </tr>
+      <tr>
+        <td style="border: 1px solid black;font-weight: bold;">Test Coupon Size</td>
+        <td style="border: 1px solid black;"><input type="text" value="<%=record.testCouponSize %>"name="testCouponSize" id=""></td>
       </tr>
     </tbody>
     <thead>
