--- a/views/editCard.ejs
+++ b/views/editCard.ejs
@@ -259,7 +259,7 @@
 								value="<%=record.f_no_qualified %>"
 								id="" />
 						</td>
-						<td>Electrode Class Used</td>
+						<td>Filler Metal/Electrode Class Used</td>
 						<td>
 							<input
 								type="text"
