--- a/views/insertCard.ejs
+++ b/views/insertCard.ejs
@@ -120,7 +120,7 @@
       <tr>
         <td>F No Qualified</td>
         <td><input type="text" name="f_no_qualified" id=""></td>
-        <td>Electrode Class Used</td>
+        <td>Filler Metal/Electrode Class Used</td>
         <td><input type="text" name="electrode_class_used" id=""></td>
       </tr>
       <tr>
