--- a/views/insertCertificate.ejs
+++ b/views/insertCertificate.ejs
@@ -93,6 +93,10 @@
         <td style="border: 1px solid black;font-weight: bold;">Date of Test</td>
         <td style="border: 1px solid black;"><input type="text" name="date_of_test" id=""></td>
       </tr>
+      <tr>
+        <td style="border: 1px solid black;font-weight: bold;">Test Coupon Size</td>
+        <td style="border: 1px solid black;"><input type="text" name="testCouponSize" id=""></td>
+      </tr>
  
     </tbody>
     <thead>
