--- a/views/viewCard.ejs
+++ b/views/viewCard.ejs
@@ -109,7 +109,7 @@
 				<tr>
 					<td>F No Qualified</td>
 					<td><%= record.f_no_qualified %></td>
-					<td>Electrode Class Used</td>
+					<td>Filler Metal/Electrode Class Used</td>
 					<td><%=record.electrode_class_used %></td>
 				</tr>
 				<tr>
