--- a/views/viewCertificate.ejs
+++ b/views/viewCertificate.ejs
@@ -87,6 +87,10 @@ h6{font-size: 11px;}
         <td style="border: 1px solid black;font-weight: bold;">Weld Type</td>
         <td style="border: 1px solid black;"><%=record.weldType %></td>
       </tr>
+      <tr>
+        <td style="border: 1px solid black;font-weight: bold;">Test Coupon Size</td>
+        <td style="border: 1px solid black;"><%=record.testCouponSize %></td>
+      </tr>
     </tbody>
     <thead>
       <tr>
