Add 'fillerMetalElectrodeClass' field to certificate model and update related views. Enhanced forms to include new field with appropriate labels for better clarity.

--- a/views/EditCertificate.ejs
+++ b/views/EditCertificate.ejs
@@ -98,6 +98,8 @@
       <tr>
         <td style="border: 1px solid black;font-weight: bold;">Test Coupon Size</td>
         <td style="border: 1px solid black;"><input type="text" value="<%=record.testCouponSize %>"name="testCouponSize" id=""></td>
+        <td style="border: 1px solid black;font-weight: bold;">Filler Metal / Electrode Class</td>
+        <td style="border: 1px solid black;"><input type="text" value="<%=record.fillerMetalElectrodeClass %>"name="fillerMetalElectrodeClass" id=""></td>
       </tr>
     </tbody>
     <thead>
