--- a/views/viewCertificate.ejs
+++ b/views/viewCertificate.ejs
@@ -90,6 +90,8 @@ h6{font-size: 11px;}
       <tr>
         <td style="border: 1px solid black;font-weight: bold;">Test Coupon Size</td>
         <td style="border: 1px solid black;"><%=record.testCouponSize %></td>
+        <td style="border: 1px solid black;font-weight: bold;">Filler Metal / Electrode Class</td>
+        <td style="border: 1px solid black;"><%=record.fillerMetalElectrodeClass %></td>
       </tr>
     </tbody>
     <thead>
