--- a/views/insertCertificate.ejs
+++ b/views/insertCertificate.ejs
@@ -96,6 +96,8 @@
       <tr>
         <td style="border: 1px solid black;font-weight: bold;">Test Coupon Size</td>
         <td style="border: 1px solid black;"><input type="text" name="testCouponSize" id=""></td>
+        <td style="border: 1px solid black;font-weight: bold;">Filler Metal / Electrode Class</td>
+        <td style="border: 1px solid black;"><input type="text" name="fillerMetalElectrodeClass" id=""></td>
       </tr>
  
     </tbody>
