Fix typos in 'EditCertificate.ejs' and 'insertCertificate.ejs' for clarity in filler metal specifications and F-Number labels.

--- a/views/insertCertificate.ejs
+++ b/views/insertCertificate.ejs
@@ -149,13 +149,13 @@
       </tr>
       <tr>
         <td style="text-align: left; border: 1px solid black;font-weight: bold;">
-          Filler Metal or electrode sopecification
+          Filler Metal or electrode specification
         </td>
         <td style="text-align: left; border: 1px solid black;"><input type="text" name="fillerMetalActual" id=""></td>
         <td style="text-align: left; border: 1px solid black;" colspan="2"><input type="text" name="fillerMetalRange" id=""></td>
       </tr>
       <tr>
-        <td style="text-align: left; border: 1px solid black;font-weight: bold;">Filler Meta F-Number(S)</td>
+        <td style="text-align: left; border: 1px solid black;font-weight: bold;">Filler Metal F-Number(S)</td>
         <td style="text-align: left; border: 1px solid black;"><input type="text" name="fillerMetalFNoActual" id=""></td>
         <td style="text-align: left; border: 1px solid black;" colspan="2"><input type="text" name="fillerMetalFNoRange" id=""></td>
       </tr>
