--- a/views/EditCertificate.ejs
+++ b/views/EditCertificate.ejs
@@ -150,13 +150,13 @@
       </tr>
       <tr>
         <td style="text-align: left; border: 1px solid black;font-weight: bold;">
-          Filler Metal or electrode sopecification
+          Filler Metal or electrode specification
         </td>
         <td style="text-align: left; border: 1px solid black;"><input value="<%=record.fillerMetalActual %>" type="text" name="fillerMetalActual" id=""></td>
         <td style="text-align: left; border: 1px solid black;" colspan="2"><input value="<%=record.fillerMetalRange %>" type="text" name="fillerMetalRange" id=""></td>
       </tr>
       <tr>
-        <td style="text-align: left; border: 1px solid black;font-weight: bold;">Filler Meta F-Number(S)</td>
+        <td style="text-align: left; border: 1px solid black;font-weight: bold;">Filler Metal F-Number(S)</td>
         <td style="text-align: left; border: 1px solid black;"><input value="<%=record.fillerMetalFNoActual %>" type="text" name="fillerMetalFNoActual" id=""></td>
         <td style="text-align: left; border: 1px solid black;" colspan="2"><input value="<%=record.fillerMetalFNoRange %>" type="text" name="fillerMetalFNoRange" id=""></td>
       </tr>
