--- a/views/viewCertificate.ejs
+++ b/views/viewCertificate.ejs
@@ -104,7 +104,7 @@ h6{font-size: 11px;}
     </tbody>
     <tbody style="text-align: center">
       <tr>
-        <td style="text-align: left; border: 1px solid black;font-weight: bold;">Welder Process(es)</td>
+        <td style="text-align: left; border: 1px solid black;font-weight: bold;">Welding Process & Type</td>
         <td style="text-align: left; border: 1px solid black;"><%=record.welderProcessActual %></td>
         <td style="text-align: left; border: 1px solid black;" colspan="2"><%=record.welderProcessRange %></td>
       </tr>
@@ -148,7 +148,7 @@ h6{font-size: 11px;}
         <td style="text-align: left; border: 1px solid black;" colspan="2"><%=record.fillerMetalRange %></td>
       </tr>
       <tr>
-        <td style="text-align: left; border: 1px solid black;font-weight: bold;">Filler Meta F-Number(S)</td>
+        <td style="text-align: left; border: 1px solid black;font-weight: bold;">Filler Metal F-Number(S)</td>
         <td style="text-align: left; border: 1px solid black;"><%=record.fillerMetalFNoActual %></td>
         <td style="text-align: left; border: 1px solid black;" colspan="2"><%=record.fillerMetalFNoRange %></td>
       </tr>
