Refine labels in Aasia Steel Card views for consistency and clarity, including updates to welding process, material specifications, and control types.

--- a/views/insertAasiaSteelCard.ejs
+++ b/views/insertAasiaSteelCard.ejs
@@ -71,37 +71,37 @@
       <tr>
         <td>Card No</td>
         <td><input hidden type="text" name="card_no" id=""></td>
-        <td>Welding Process and Type</td>
+        <td>Welding Process & Type</td>
         <td><input type="text" name="welding_process_and_type" id=""></td>
       </tr>
       <tr>
         <td>Direct or Remote Visual Control</td>
         <td><input type="text" name="direct_or_remote_visual_control" id=""></td>
-        <td>Auto Arc Voltage Control</td>
+        <td>Auto Arc Voltage Control (GTAW)</td>
         <td><input type="text" name="auto_arc_voltage_control" id=""></td>
       </tr>
       <tr>
         <td>Automatic Joint Tracking</td>
         <td><input type="text" name="automatic_joint_tracking" id=""></td>
-        <td>Positions</td>
+        <td>Position(s)</td>
         <td><input type="text" name="positions" id=""></td>
       </tr>
       <tr>
-        <td>Base Material Dia and Thickness</td>
+        <td>Base Material Dia & Thickness</td>
         <td><input type="text" name="base_material_dia_and_thickness" id=""></td>
-        <td>Consumable Inserts</td>
+        <td>Consumable Inserts (GTAW/PAW)</td>
         <td><input type="text" name="consumable_inserts" id=""></td>
       </tr>
       <tr>
-        <td>Backing</td>
+        <td>Backing (With or Without)</td>
         <td><input type="text" name="backing" id=""></td>
         <td>Single or Multiple Passes</td>
         <td><input type="text" name="single_or_multiple_passes" id=""></td>
       </tr>
       <tr>
-        <td>Base Metal Spec or P No</td>
+        <td>Base Metal Spec / P-No</td>
         <td><input type="text" name="base_metal_spec_or_p_no" id=""></td>
-        <td>Filler Metal Spec or Class</td>
+        <td>Filler Metal (SFA) Spec. / Class</td>
         <td><input type="text" name="filler_metal_spec_or_class" id=""></td>
       </tr>
       <tr>
