--- a/views/viewAasiaSteelCard.ejs
+++ b/views/viewAasiaSteelCard.ejs
@@ -69,37 +69,37 @@
 				<tr>
 					<td>Card No</td>
 					<td><%= record.card_no%></td>
-					<td>Welding Process and Type</td>
+					<td>Welding Process & Type</td>
 					<td><%= record.welding_process_and_type%></td>
 				</tr>
 				<tr>
 					<td>Direct or Remote Visual Control</td>
 					<td><%= record.direct_or_remote_visual_control %></td>
-					<td>Auto Arc Voltage Control</td>
+					<td>Auto Arc Voltage Control (GTAW)</td>
 					<td><%= record.auto_arc_voltage_control%></td>
 				</tr>
 				<tr>
 					<td>Automatic Joint Tracking</td>
 					<td><%=record.automatic_joint_tracking %></td>
-					<td>Positions</td>
+					<td>Position(s)</td>
 					<td><%= record.positions%></td>
 				</tr>
 				<tr>
-					<td>Base Material Dia and Thickness</td>
+					<td>Base Material Dia & Thickness</td>
 					<td><%=record.base_material_dia_and_thickness%></td>
-					<td>Consumable Inserts</td>
+					<td>Consumable Inserts (GTAW/PAW)</td>
 					<td><%= record.consumable_inserts %></td>
 				</tr>
 				<tr>
-					<td>Backing</td>
+					<td>Backing (With or Without)</td>
 					<td><%= record.backing %></td>
 					<td>Single or Multiple Passes</td>
 					<td><%= record.single_or_multiple_passes %></td>
 				</tr>
 				<tr>
-					<td>Base Metal Spec or P No</td>
+					<td>Base Metal Spec / P-No</td>
 					<td><%= record.base_metal_spec_or_p_no %></td>
-					<td>Filler Metal Spec or Class</td>
+					<td>Filler Metal (SFA) Spec. / Class</td>
 					<td><%= record.filler_metal_spec_or_class %></td>
 				</tr>
 				<tr>
