--- a/views/editAasiaSteelCard.ejs
+++ b/views/editAasiaSteelCard.ejs
@@ -133,7 +133,7 @@
 								id=""
 								value="<%=record.card_no %>" />
 						</td>
-						<td>Welding Process and Type</td>
+						<td>Welding Process & Type</td>
 						<td>
 							<input
 								type="text"
@@ -151,7 +151,7 @@
 								value="<%=record.direct_or_remote_visual_control %>"
 								id="" />
 						</td>
-						<td>Auto Arc Voltage Control</td>
+						<td>Auto Arc Voltage Control (GTAW)</td>
 						<td>
 							<input
 								type="text"
@@ -169,7 +169,7 @@
 								value="<%=record.automatic_joint_tracking %>"
 								id="" />
 						</td>
-						<td>Positions</td>
+						<td>Position(s)</td>
 						<td>
 							<input
 								type="text"
@@ -179,7 +179,7 @@
 						</td>
 					</tr>
 					<tr>
-						<td>Base Material Dia and Thickness</td>
+						<td>Base Material Dia & Thickness</td>
 						<td>
 							<input
 								type="text"
@@ -187,7 +187,7 @@
 								name="base_material_dia_and_thickness"
 								id="" />
 						</td>
-						<td>Consumable Inserts</td>
+						<td>Consumable Inserts (GTAW/PAW)</td>
 						<td>
 							<input
 								type="text"
@@ -197,7 +197,7 @@
 						</td>
 					</tr>
 					<tr>
-						<td>Backing</td>
+						<td>Backing (With or Without)</td>
 						<td>
 							<input
 								type="text"
@@ -215,7 +215,7 @@
 						</td>
 					</tr>
 					<tr>
-						<td>Base Metal Spec or P No</td>
+						<td>Base Metal Spec / P-No</td>
 						<td>
 							<input
 								type="text"
@@ -223,7 +223,7 @@
 								name="base_metal_spec_or_p_no"
 								id="" />
 						</td>
-						<td>Filler Metal Spec or Class</td>
+						<td>Filler Metal (SFA) Spec. / Class</td>
 						<td>
 							<input
 								type="text"
